ヘッダーのデザインの作成（sp版）

--- a/Component/index.html
+++ b/Component/index.html
@@ -9,27 +9,27 @@
 <body>
     <header>
         <h1 class="title">My Portfolio
-            <img src="/imgFile/penguin.png" alt="" width="60" height="80">
+            <img src="/img/header.png" alt="" width="70" height="70">
 
         </h1>
         <nav class="header_nav">
-            <ul>
-                <li>about</li>
+            <ul class="header_content">
+                <li >about</li>
                 <li>Works</li>
                 <li>Blog</li>
                 <li>Contact</li>
             </ul>
         </nav>
-        <ul>
+        <ul class="header_icon">
             <li>
                 <a href="">
-                    <img src="/imgFile/Instagram.jpeg" alt="" width="28" height="28">
+                    <img class="instagram" src="/img/Instagram.png" alt="" width="28" height="28">
 
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/imgFile/facebook.jpeg" alt="" width="28" height="28">
+                    <img class="instagram" src="/img/Instagram.png" alt="" width="28" height="28">
 
                 </a>
             </li>
