mainのメインが座像とaboutMeとworksとblogの形の作成

--- a/Component/index.html
+++ b/Component/index.html
@@ -4,28 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,100;1,300;1,900&family=Noto+Sans+JP:wght@300;500;700&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="styled.css">
 </head>
 <body>
     <main>
         <div class="main_img">
-            <img src="/imgFile/main.png" alt="" width="300" height="300">
+            <img class="main_img" src="/Component/img/main.png" alt="" width="300" height="300">
         </div>
-            <section class="Me">
-                <h2 class="title_me">aboutMe
-                    <img src="/imgFile/Heart.png" alt="" width="45" height="45">
+            <section class="me">
+                <h2 class="me_title">aboutMe
                 </h2>
+                <wrapper class="me01">
+                <img class="me_img01">
+                <p class="me_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                </wrapper>
+                    <wrapper class="me02">
+                        <img class="me_img02">
+                        <p class="me_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                    </wrapper>
+
             </section>
             <section class="Works">
-                <h2 class="title_works">Works
-                    <img src="/imgFile/Heart.png" alt="" width="45" height="45">
-
+                <h2 class="works_title">Works
                 </h2>
+                <wrapper class="works01">
+                    <img class="works_img01">
+                    <p class="works_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                    </wrapper>
+
+                    <wrapper class="works02">
+                        <img class="works_img02">
+                        <p class="works_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                    </wrapper>
+
             </section>
             <section class="Blog">
-                <h2 class="title_blog">Blog
-                    <img src="/imgFile/Heart.png" alt="" width="45" height="45">
+                <h2 class="blog_title">Blog
                 </h2>
+                <wrapper class="blog01">
+                    <img class="blog_img01">
+                    <p class="blog_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                    </wrapper>
+
+                    <wrapper class="blog02">
+                        <img class="blog_img02">
+                        <p class="blog_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                        </wrapper>
+
 
             </section>
     </main>
