sp版のheaderの作成

--- a/Component/index.html
+++ b/Component/index.html
@@ -9,15 +9,14 @@
 <body>
     <header>
         <h1 class="title">My Portfolio
-            <img src="/img/header.png" alt="" width="70" height="70">
-
+            <img  class="header_img" src="/img/header.png" alt="" width="60" height="65">
         </h1>
         <nav class="header_nav">
             <ul class="header_content">
-                <li >about</li>
-                <li>Works</li>
-                <li>Blog</li>
-                <li>Contact</li>
+                <li ><a href="" class="header_about">about</a></li>
+                <li><a href="" class="header_about">Works</a></li>
+                <li><a href="" class="header_about">Blog</a></li>
+                <li><a href="" class="header_about">Contact</a></li>
             </ul>
         </nav>
         <ul class="header_icon">
@@ -29,7 +28,7 @@
             </li>
             <li>
                 <a href="">
-                    <img class="instagram" src="/img/Instagram.png" alt="" width="28" height="28">
+                    <img class="facebook" src="/img/Facebook.png" alt="" width="28" height="28">
 
                 </a>
             </li>
