メインの画像と自己紹介の画像を作成

--- a/Component/index.html
+++ b/Component/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <main>
-        <div class="main_img">
-            <img class="main_img" src="/Component/img/main.png" alt="" width="300" height="300">
+        <div class="warapper_img">
+            <img class="main_img" src="/Component/img/main.png" alt="" width="750" height="500">
         </div>
             <section class="me">
                 <h2 class="me_title">aboutMe
                 </h2>
                 <wrapper class="me01">
-                <img class="me_img01">
+                <img class="me_img01" src="/Component/img/aboutMe.png" width="150" height="150">
                 <p class="me_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                 </wrapper>
                     <wrapper class="me02">
-                        <img class="me_img02">
+                        <img class="me_img02" src="/Component/img/aboutMe02.png" width="150" height="150">
                         <p class="me_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                     </wrapper>
 
