--- a/Component/styled.css
+++ b/Component/styled.css
@@ -1,12 +1,16 @@
 @charset "UTF-8";
+
+.warapper_img{
+margin: 0 auto;
+}
+
 .main_img{
-    width: 350px;
-    max-width: 100%;
+    width: 95%;
 }
 
 .me{
     display: block;
-    width: 100%;
+    max-width: 760px;
     text-align: center;
 }
 
