footerのデザインの制作

--- a/Component/index.html
+++ b/Component/index.html
@@ -9,11 +9,11 @@
 <body>
     <footer>
         <nav class="footer_nav">
-            <ul>
-                <li>about</li>
-                <li>Works</li>
-                <li>Blog</li>
-                <li>Contact</li>
+            <ul class="footer_content">
+                <li ><a href="" class="footer_about">about</a></li>
+                <li><a href="" class="footer_about">Works</a></li>
+                <li><a href="" class="footer_about">Blog</a></li>
+                <li><a href="" class="footer_about">Contact</a></li>
             </ul>
         </nav>
     </footer>
