お問い合わせとaboutの遷移先のページ作成

--- a/Component/index.html
+++ b/Component/index.html
@@ -8,31 +8,33 @@
     rel="stylesheet">
     <link rel="stylesheet" href="styled.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
 
 </head>
 <body>
     <header>
         <h1 class="title">My Portfolio
-            <img  class="header_img" src="/img/header.png" alt="" width="60" height="65">
+            <img  class="header_img" src="/Component/img/header.png" alt="" width="60" height="65">
         </h1>
         <nav class="header_nav">
             <ul class="header_content">
-                <li ><a href="" class="header_about">about</a></li>
-                <li><a href="" class="header_about">Works</a></li>
-                <li><a href="" class="header_about">Blog</a></li>
-                <li><a href="" class="header_about">Contact</a></li>
+                <li ><a href="about/about.html" class="header_about">About</a></li>
+                <li><a href="#" class="header_about" id="header_about">Works</a></li>
+                <!-- <li><a href="" class="header_about">Blog</a></li> -->
+                <li><a href="/Component/comtact/contact.html" class="header_about">Contact</a></li>
             </ul>
         </nav>
         <ul class="header_icon">
             <li>
                 <a href="">
-                    <img class="instagram" src="/img/Instagram.png" alt="" width="28" height="28">
+                    <img class="instagram" src="/Component/img/Instagram.png" alt="" width="28" height="28">
 
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img class="facebook" src="/img/Facebook.png" alt="" width="28" height="28">
+                    <img class="facebook" src="/Component/img/Facebook.png" alt="" width="28" height="28">
 
                 </a>
             </li>
@@ -44,48 +46,48 @@
             </h2>
             <img class="main_img" src="/Component/img/main.png" alt="" width="750" height="500">
         </div>
-        <section class="me">
-            <h2 class="me_title">aboutMe
+        <section class="aboutMe">
+            <h2 class="aboutMe_title">aboutMe
             </h2>
             <div class="aboutMe_pc">
-                <wrapper class="me01">
-                    <img class="me_img01" src="/Component/img/aboutMe.png" width="150" height="150">
-                    <p class="me_text01">学んだ言語とライブラリ</p>
-                    <p class="me_text01">HTML,CSS,javaScript,React
+                <wrapper class="aboutMe01">
+                    <img class="aboutMe_img01" src="/Component/img/aboutMe.png" width="150" height="150">
+                    <p class="aboutMe_text01">学んだ言語とライブラリ</p>
+                    <p class="aboutMe_text01">HTML,CSS,javaScript,React
                     </p>
                 </wrapper>
-                <wrapper class="me02">
-                    <img class="me_img02" src="/Component/img/aboutMe02.png" width="150" height="150">
-                    <p class="me_text02">大事なこと</p>
-                <p class="me_text02">エラーを読んで理解する！コードに意味を持たせる！深掘りする！コンソールログ出して考える！</p>
+                <wrapper class="aboutMe02">
+                    <img class="aboutMe_img02" src="/Component/img/aboutMe02.png" width="150" height="150">
+                    <p class="aboutMe_text02">大事なこと</p>
+                <p class="aboutMe_text02">エラーを読んで理解する！コードに意味を持たせる！深掘りする！コンソールログ出して考える！</p>
                 </wrapper>
             </div>
             </section>
-            <section class="Works">
+            <section class="Works" id="Works">
                 <h2 class="works_title">Works
                 </h2>
                 <div class="Works_pc">
-                <wrapper class="works01">
-                    <img class="me_img01" src="/Component/img/aboutMe.png" width="150" height="150">
-                    <p class="works_text01">Ys.beautyの作成</p>
-                    <p class="works_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                <wrapper class="Works01">
+                    <img class="aboutMe_img01" src="/Component/img/aboutMe.png" width="150" height="150">
+                    <p class="works_text01">Ys.meの作成</p>
+                    <p class="works_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                     </wrapper>
 
-                    <wrapper class="works02">
+                    <wrapper class="Works02">
                         <img class="me_img02" src="/Component/img/aboutMe02.png" width="150" height="150">
                         <p class="works_text02">車のサイトの作成</p>
-                        <p class="works_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                        <p class="works_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                     </wrapper>
 
-                    <wrapper class="works01">
+                    <wrapper class="Works01">
                     <img class="me_img01" src="/Component/img/aboutMe.png" width="150" height="150">
                     <p class="works_text01">求人サイトの作成</p>
-                    <p class="works_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                    <p class="works_text01">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                     </wrapper>
                 </div>
 
             </section>
-            <section class="Blog">
+            <!-- <section class="Blog">
                 <h2 class="blog_title">Blog
                 </h2>
                 <wrapper class="blog01">
@@ -97,20 +99,21 @@
                         <img class="blog_img02">
                         <p class="blog_text02">ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
                         </wrapper>
-            </section>
+            </section> -->
 
-            <button class="button_up">☝</button>
+            <button class="button_up" id="button_up">☝</button>
     </main>
     <footer>
         <nav class="footer_nav">
             <ul class="footer_content">
-                <li ><a href="" class="footer_about">about</a></li>
-                <li><a href="" class="footer_about">Works</a></li>
-                <li><a href="" class="footer_about">Blog</a></li>
-                <li><a href="" class="footer_about">Contact</a></li>
+                <li ><a href="#" class="footer_about">About</a></li>
+                <li><a href="#" class="footer_about">Works</a></li>
+                <!-- <li><a href="" class="footer_about">Blog</a></li> -->
+                <li><a href="#" class="footer_about">Contact</a></li>
             </ul>
         </nav>
     </footer>
 </body>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
 </html>
