--- a/Component/styled.css
+++ b/Component/styled.css
@@ -33,6 +33,10 @@ padding: 20px;
     text-decoration:none;
     color:#333;
 }
+.header_about:hover {
+    transition: all 0.3s;
+    opacity: 0.5;
+}
 
 .header_icon{
     list-style: none;
@@ -41,6 +45,14 @@ padding: 20px;
     margin: 0 20px;
     
 }
+.aboutMe_pc,.Works_pc {
+ display: flex;
+ flex-direction: column;
+ gap: 20px;
+ padding: 20px;
+ 
+}
+
 .warapper_img{
 margin: 0 auto;
 }
@@ -49,7 +61,7 @@ margin: 0 auto;
     width: 95%;
 }
 
-.me,
+.aboutMe,
 .Blog,
 .Works {
     display: block;
@@ -57,7 +69,7 @@ margin: 0 auto;
     text-align: center;
 }
 
-.me_title,
+.aboutMe_title,
 .works_title,
 .blog_title
 {
@@ -70,9 +82,15 @@ margin: 0 auto;
     line-height: 1.0;
     text-align: center;
     margin: 30px 0px;
+    
 }
-.me_text01,
-.me_text02,
+
+.aboutMe01,.aboutMe02,.Works01,.Works02 {
+    border-radius: 10px;
+    box-shadow: 0 3px 6px 0 #cccccc;
+}
+.aboutMe_text01,
+.aboutMe_text02,
 .works_text01,
 .works_text02,
 .blog_text01,
@@ -105,7 +123,7 @@ max-width: fit-content;
 .footer_about {
     text-decoration: none;
     color: #333;
-   
+
 }
 
 .button_up{
@@ -120,8 +138,14 @@ max-width: fit-content;
     text-align: center;
 }
 
+.button_up {
+    width: 750px;
+    position: fixed;
+    bottom: 30px; left: 30px; 
+}
+
 @media screen and (min-width:750px){
-    .me,
+    .aboutMe,
     .Blog,
     .Works{
     margin: 0 auto;
@@ -139,6 +163,8 @@ max-width: fit-content;
     }
     .aboutMe_pc,.Works_pc {
         display: flex;
+        flex-direction: row;
+        gap:10px;
     }
     .header_icon{
         flex-direction: row-reverse;
@@ -146,7 +172,6 @@ max-width: fit-content;
 
     .warapper_img{
         display: flex;
-        flex-direction: row;
         gap: 50px;
         max-width: 1000px;
     }
@@ -163,5 +188,11 @@ max-width: fit-content;
     font-family: 'Lato', sans-serif;
     margin: auto;
     }
+
+    .button_up {
+        width: 1000px;
+        bottom: 10px; left: 400px; 
+    }
+
 }
 
