--- a/Component/comtact/contact.html
+++ b/Component/comtact/contact.html
@@ -51,7 +51,7 @@
                     <span class="errorMessage" id="emailErrorMessage"></span>
 
                     <dt class="contact_number">電話番号</dt>
-                    <dd><input class="contact_number_input" id="contact_number_input" type="text"></dd>
+                    <dd><input class="contact_number_input" id="contact_number_input" type="tel"></dd>
                     <span class="errorMessage" id="number_errorMessage"></span>
 
                     <dt class="contact_about" >お問い合わせ内容</dt>
