--- a/Component/index.html
+++ b/Component/index.html
@@ -41,7 +41,7 @@
         </ul>
     </header>
     <main>
-        <div class="warapper_img">
+        <div class="wrapper_img">
             <h2 class="main_text">ポートフォリオですよ!!
             </h2>
             <img class="main_img" src="/Component/img/main.png" alt="" width="750" height="500">
